<resources>
    <string name="app_name">UMEED - A DROP OF HOPE</string>
    <string name="title">Umeed - A Drop of Hope</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">We are proud to have more than 12,000+ volunteers support</string>
    <string name="desc1">"Umeed - A Drop of Hope" is a youth club formed by youths of the nation, the basic motto of which is Social Service. Besides the Basic Motto, the basic idea of such a formation is to help each and everyone who needs help. </string>
    <string name="desc2">Umeed works for education for needy children who are under difficult circumstances, such as child labour, children of poorest of the parents, children inflicted and affected with HIV/AIDS, street and runaway children, children with rare disabilities, disaster struck children and slum children, so that they and their families get empowered.</string>
    <string name="callus">Call us at +919711163637</string>
    <string name="mailus">Mail us at info@umeedngo.org</string>
    <string name="copyright1">© 2016 Umeed - A Drop Of Hope. All Right Reserved</string>
    <string name="copyright2">Designed and Developed By Rishabh Banga</string>
</resources>
