<?xml version="1.0" encoding="utf-8"?>

<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="rishabhbanga.umeedngo.MainActivity"
     tools:showIn="@layout/activity_main">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/titletv"
        android:textStyle="bold" />

      <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="12dp"
        android:id="@+id/viewFlipper"
        android:layout_below="@+id/titletv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >
      </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewFlipper"
        android:background="@color/colorAccent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/welcometv"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/joinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/joinus"
            android:paddingTop="8dp"
            android:clickable="true"
            android:onClick="onJoinUs" />

    </LinearLayout>

      <TextView
        android:text="@string/desc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/desc1tv"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="8dp"
        android:layout_marginTop="270dp" />

    <TextView
        android:text="@string/desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/desc2tv"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:padding="8dp"
        android:layout_below="@+id/desc1tv" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@+id/desc2tv"
           android:textSize="12sp"
           android:background="@color/colorAccent"
           android:layout_marginTop="2dp"
           android:orientation="horizontal">

           <TextView
               android:text="@string/callus"
               android:textAlignment="center"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:id="@+id/calltv"
               android:textColor="#FFFFFF"
               android:layout_weight="1"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true" />

           <TextView
               android:text="@string/mailus"
               android:textAlignment="center"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:id="@+id/mailtv"
               android:textColor="#FFFFFF"
               android:layout_weight="1"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true" />

       </LinearLayout>

       <TextView
           android:id="@+id/filler"
           android:layout_width="match_parent"
           android:layout_height="2dp"
           android:background="@color/colorAccent"
           android:layout_marginTop="41dp"
           android:layout_below="@+id/desc2tv"/>

       <TextView
           android:text="@string/copyright1"
           android:textAlignment="center"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@+id/filler"
           android:textSize="11sp"
           android:background="@color/colorAccent"
           android:id="@+id/copyright1"
           android:textColor="#FFFFFF"/>

       <TextView
           android:text="@string/copyright2"
           android:textAlignment="center"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@+id/copyright1"
           android:textSize="11sp"
           android:background="@color/colorAccent"
           android:id="@+id/copyright2"
           android:textColor="#FFFFFF"/>

   </RelativeLayout>

</ScrollView>

